--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,11 @@ jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
 MarkupSafe==3.0.3
 narwhals==2.15.0
-numpy==2.4.1
+numpy>=1.26.0,<2.0
 nvidia-nccl-cu12==2.29.2
 openai==2.16.0
 packaging==26.0
-pandas==2.3.3
+pandas>=2.0.0
 pillow==12.1.0
 protobuf==6.33.4
 pyarrow==23.0.0
@@ -40,8 +40,8 @@ pytz==2025.2
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.30.0
-scikit-learn==1.8.0
-scipy==1.17.0
+scikit-learn>=1.3.0
+scipy>=1.11.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -57,4 +57,10 @@ typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
 watchdog==6.0.0
-xgboost==3.1.3
+xgboost>=2.0.0
+google-generativeai>=0.3.0
+sentence-transformers>=2.2.0
+langchain>=0.1.0
+langchain-google-genai>=0.0.6
+langchain-community>=0.0.20
+chromadb>=0.4.0
